<?php

declare(strict_types=1);

namespace App\Core\Http;

use RuntimeException;

final class InvalidRequestException extends RuntimeException
{
}
